Bug 473090 - When opening a tif file you can't see the image or resize the canvas
Summary: When opening a tif file you can't see the image or resize the canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.1.5
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-07 05:57 UTC by kyle l
Modified: 2024-09-10 14:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Old vue xstream render (343.05 KB, image/tiff)
2023-08-07 05:57 UTC, kyle l
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kyle l 2023-08-07 05:57:59 UTC
Created attachment 160782 [details]
Old vue xstream render

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
When opening a tif file (with no canvas size set?) you can't see the image or resize the canvas

STEPS TO REPRODUCE
1. open provided file
2. choose image->Resize Canvas
3. try to resize the canvas

OBSERVED RESULT
When the file is opened no image or error message is displayed, but if you roll the mouse over the background layer(only layer) you get a preview of the image. If you try to resize the canvas the dimensions are 0 x 0 and can't be edited. If you look at the image properties the resolution is 0.000000 ppi. The image dimensions and file size are displayed correctly below the canvas but the pixel to canvas size slider shows 9000%. Saving the file doesn't fix it or make it editable. Opening it in another image editor and saving it fixes the problem

I'm seeing the same behavior in the 5.2 beta


EXPECTED RESULT
For the image to open for editing like it does in windows paint, photoshop, etc


SOFTWARE/OS VERSIONS
Windows: windows 10 pro 22H2 Build 19045.1889
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
These files are 12 year old Eon Vue xstream renders and I suspect some of the image data, like resolution, where not stored properly by the render engine. This isn't a bug as much as an exception recognizing/handling issue, like, if the document opens, has pixel dimensions, but no canvas dimensions, warn the user and offer to set the canvas dimensions to match the pixel dimensions. Or just do that automatically.

I've attached one of the images.

I wasn't sure if this should be considered a minor bug or a wish list item
Comment 1 wolthera 2023-10-18 11:55:53 UTC
I can confirm!
Comment 2 Bug Janitor Service 2024-08-22 18:24:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2223
Comment 3 Halla Rempt 2024-08-22 18:59:58 UTC
Git commit dce97025f6a3b3ca5a6b0a74030b52de715b9d79 by Halla Rempt, on behalf of Freya Lupen.
Committed on 22/08/2024 at 18:58.
Pushed by rempt into branch 'master'.

TIFF: Ignore resolution if set to 0

The code used a default resolution if it wasn't set at all,
but didn't check if it was set and 0.

M  +2    -2    plugins/impex/tiff/kis_tiff_import.cc

https://invent.kde.org/graphics/krita/-/commit/dce97025f6a3b3ca5a6b0a74030b52de715b9d79
Comment 4 Freya Lupen 2024-09-10 14:56:58 UTC
Git commit 2a1d1b2bee9e2ceee510afe09588895016c3a181 by Freya Lupen.
Committed on 10/09/2024 at 14:41.
Pushed by freyalupen into branch 'krita/5.2'.

TIFF: Ignore resolution if set to 0

The code used a default resolution if it wasn't set at all,
but didn't check if it was set and 0.
(cherry picked from commit dce97025f6a3b3ca5a6b0a74030b52de715b9d79)

M  +2    -2    plugins/impex/tiff/kis_tiff_import.cc

https://invent.kde.org/graphics/krita/-/commit/2a1d1b2bee9e2ceee510afe09588895016c3a181