TIFF: Ignore resolution if set to 0

The code used a default resolution if it wasn't set at all,
but didn't check if it was set and 0.

BUG:473090
(cherry picked from commit dce97025f6a3b3ca5a6b0a74030b52de715b9d79)